# microatoll_GUI

./: .gitignore  README.md  microatoll_GUI.sln  pyproject.toml
microatoll_GUI/: README.md  __main__.py  microatoll_GUI.pyproj  pyproject.toml
microatoll_GUI/src/gui/: main_window.py  setting_panel.py  sim_plot.py  sl_plot.py
microatoll_GUI/src/io_interface/: csvio.py  jsonio.py
microatoll_GUI/src/microatoll_gui/: __main__.py
microatoll_GUI/src/microatoll_gui/gui/: main_window.py
microatoll_GUI/src/microatoll_gui/simulator/: iteration.py
microatoll_GUI/src/microatoll_sim_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
microatoll_GUI/src/simulator/: iteration.py  polyline_utils.py  simulator.py  test_engine.py
sample/: SeaLevel.csv
src/microatoll_gui/: __main__.py
src/microatoll_gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/microatoll_gui/gui/: main_window.py  plot_interactions.py  setting_panel.py  sim_plot.py  sl_plot.py
src/microatoll_gui/io_interface/: __init__.py  paths.py
src/microatoll_gui/models/: __init__.py  polyline.py
src/microatoll_gui/simulator/: iteration.py  simulator.py
src/microatoll_sim_suite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
