[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microatoll-sim-suite"
version = "0.1.0"
description = "Microatoll Growth Simulator (core + GUI) in a src-layout"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "J. Komori" }
]

dependencies = [
  "PySide6>=6.6",
  "matplotlib>=3.8"
]
[project.scripts]
microatoll-sim = "gui.main_window:launch"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.8",
  "pytest>=7.4"
]
